# cloud-agent-demo

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  SPEC.md  _config.yml  about.md  admin.md  archive.md  config.yaml  index.md  pyproject.toml  why.md
.github/: copilot-setup-steps.yml
.github/ISSUE_TEMPLATE/: config.yml  initial-setup.yml  research-request.yml
.github/agents/: agent-creator.agent.md  competitive-analyst.agent.md  design-specialist.agent.md  executive-analyst.agent.md  github-specialist.agent.md  japan-market-specialist.agent.md  linkedin-draft-assistant.agent.md  microsoft-specialist.agent.md  news-curator.agent.md  technical-researcher.agent.md
.github/workflows/: auto-title.yml  copilot-auto-approve.yml  copilot-chain.yml
_data/: agents.yml  designs.yml  sources.yml
_layouts/: default.html  post.html
_posts/: 2026-04-01-02-00-welcome-to-project-miki.md  2026-04-01-11-42-microsoft-blog-weekly-summary.md  2026-04-01-14-36-github-today-updates.md  2026-04-01-14-52-microsoft-today-roundup.md  2026-04-01-18-28-microsoft-today-updates.md  2026-04-01-19-29-microsoft-weekly-executive-briefing.md  2026-04-01-20-59-satya-nadella-recent-leadership-linkedin-draft.md  2026-04-02-07-07-todays-microsoft.md  2026-04-02-16-14-microsoft-weekly-hot-topics.md  2026-04-03-10-55-azure-weekly-hot-topics-review.md  2026-04-03-11-40-github-changelog-daily-summary.md  2026-04-03-12-17-github-weekly-changelog-deep-dive.md
alembic/: alembic.ini
assets/css/: style.css
src/snd/: __init__.py  config.py  (+2 more)
tests/: __init__.py  conftest.py
(+17 files in other folders)
