[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategic-narrative-diff"
version = "0.1.0"
description = "Automated competitive intelligence system that monitors executive blog posts and delivers AI-analyzed email digests."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "apscheduler>=3.10,<4.0",
    "sendgrid>=6.0",
    "langdetect>=1.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "vcrpy>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
